<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/stone_50"
    tools:context=".ui.activity.OrderDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/stone_50">

                <TextView
                    style="@style/AppBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="44dp"
                    android:text="@string/order_detail"
                    android:textSize="18sp" />
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.25dp"
            android:background="@color/black_3"
            app:layout_constraintBottom_toBottomOf="@id/app_bar_layout" />

        <TextView
            android:id="@+id/tv_order_id"
            style="@style/DetailOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="AUV300-200"
            android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"/>

        <TextView
            android:id="@+id/tv_menu"
            style="@style/DetailOrderMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_order_id"
            app:layout_constraintTop_toBottomOf="@id/tv_order_id"
            tools:text="Ayam Geprek" />

        <TextView
            android:id="@+id/tv_restaurant"
            style="@style/DetailOrderRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Geprek Pak Ijo"
            app:layout_constraintStart_toStartOf="@id/tv_order_id"
            app:layout_constraintTop_toBottomOf="@id/tv_menu"/>

        <TextView
            android:id="@+id/tv_address"
            style="@style/DetailOrderAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Jalan Setapak Merah no. 11, Kecamatan Ilir II, Palembang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant"/>

        <TextView
            android:id="@+id/tv_clickable_check_location"
            style="@style/DetailOrderTvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_location"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="@id/tv_order_id"
            app:layout_constraintTop_toBottomOf="@id/tv_address"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_maps"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="44dp"
            app:layout_constraintTop_toBottomOf="@id/tv_clickable_check_location" />

        <TextView
            android:id="@+id/tv_total"
            style="@style/DetailOrderTvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            app:layout_constraintStart_toStartOf="@id/tv_order_id"
            app:layout_constraintTop_toBottomOf="@id/fragment_maps"/>

        <TextView
            android:id="@+id/tv_price"
            style="@style/DetailOrderPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/price"
            app:layout_constraintEnd_toEndOf="@id/fragment_maps"
            app:layout_constraintTop_toTopOf="@id/tv_total"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/status_order_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/button_send"
            android:layout_marginTop="77.5dp"/>

        <Button
            android:id="@+id/button_send"
            android:layout_width="304dp"
            android:layout_height="49dp"
            android:background="@drawable/button"
            app:backgroundTint="@color/blue"
            android:text="@string/order_received"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="81dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>