<!-- res/layout/fragment_bottom_sheet.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingBottom="24dp">

    <ImageView
        android:id="@+id/iv_image_menu"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:background="@drawable/rounded_corner_rectangle"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_menu"
        style="@style/DetailOrderMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image_menu"
        tools:text="Ayam Geprek" />

    <TextView
        android:id="@+id/tv_restaurant"
        style="@style/DetailOrderRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Geprek Pak Ijo"
        app:layout_constraintStart_toStartOf="@id/tv_menu"
        app:layout_constraintTop_toBottomOf="@id/tv_menu"/>

    <TextView
        android:id="@+id/tv_clickable_check_location"
        style="@style/DetailOrderTvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_location"
        android:fontFamily="@font/lato_bold"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@id/tv_restaurant"
        app:layout_constraintTop_toBottomOf="@id/tv_restaurant"/>

    <TextView
        android:id="@+id/tv_address"
        style="@style/DetailOrderAddress"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Jalan Setapak Merah no. 11, Kecamatan Ilir II, Palembang"
        app:layout_constraintStart_toStartOf="@id/tv_clickable_check_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_clickable_check_location"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_now"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/clickable_tv_donation"
        style="@style/DetailOrderTvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donation_clickable_text"
        android:fontFamily="@font/lato_bold"
        android:clickable="true"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_button"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
