<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ScanActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_image_result">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">
            
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/stone_50"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@color/transparent"
                android:contentDescription="@string/back" />

            <TextView
                style="@style/AppBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/check_expire"
                android:textColor="@color/stone_50"
                android:textSize="18sp" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_image_result"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        android:layout_marginTop="36dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:scaleType="center" />
    
    <Button
        android:id="@+id/btn_predict"
        style="@style/Button"
        android:layout_width="211dp"
        android:layout_height="48.5dp"
        android:text="@string/check"
        android:textSize="18sp"
        android:background="@drawable/button"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="85dp" />

    <TextView
        android:id="@+id/tv_predict_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_predict"
        tools:text="Fresh Bread"
        android:textColor="@color/stone_50"
        android:textSize="44sp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:fontFamily="@font/lato_black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Kemungkinan aman untuk dikonsumsi"
        android:textColor="@color/stone_50"
        android:textSize="20sp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:fontFamily="@font/lato_regular"
        app:layout_constraintTop_toBottomOf="@id/tv_predict_result"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center" />

</androidx.constraintlayout.widget.ConstraintLayout>