<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:background="@color/stone_50"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    tools:context=".ui.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="96dp">

            <TextView
                android:id="@+id/tv_user_first_name"
                style="@style/GreetingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Hai, User"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tagline"
                style="@style/Tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="@id/tv_user_first_name"
                app:layout_constraintTop_toBottomOf="@id/tv_user_first_name"
                android:text="@string/tagline" />

            <ImageButton
                android:id="@+id/btn_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_user_first_name"
                app:layout_constraintBottom_toBottomOf="@id/tv_tagline"
                android:background="@drawable/logout_structure"
                android:padding="7dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/signout" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/poster"
                android:layout_height="160dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/stone_50"
                app:cardCornerRadius="4dp"
                app:strokeColor="@color/transparent"
                android:padding="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_tagline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/banner" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_category"
                style="@style/CategoryLayout"
                android:layout_width="match_parent"
                android:name="com.example.kenyang.ui.fragments.CategoriesFragment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_3"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_category"
                app:layout_constraintStart_toStartOf="@id/poster" />

            <TextView
                android:id="@+id/tv_title_recommendation"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="@id/rv_recommendation"
                android:text="@string/shortest_distance" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommendation"
                android:background="@color/stone_50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title_recommendation"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tv_title_second_recommendation"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_recommendation"
                app:layout_constraintStart_toStartOf="@id/tv_title_recommendation"
                android:text="@string/highest_rating" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_second_recommendation"
                android:background="@color/stone_50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title_second_recommendation"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

<com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-50dp"
        android:layout_gravity="bottom"
        app:itemIconSize="24dp"
        app:itemTextColor="@color/blue"
        app:itemIconTint="@color/blue"
        app:itemBackground="@color/stone_50"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


